# ihme-modeling

gbd_2023/shared_code/bop/: LICENSE  README.md  pyproject.toml
gbd_2023/shared_code/bop/data/continuous/: README.md  diet_veg-cvd_ihd.csv  settings.yaml
gbd_2023/shared_code/bop/data/dichotomous/: settings.yaml  smoking_direct-hip_fracture.csv
gbd_2023/shared_code/bop/sphinx/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
gbd_2023/shared_code/bop/sphinx/api_reference/: continuous_pipeline.rst  dichotomous_pipeline.rst  index.rst
gbd_2023/shared_code/bop/src/: README.md
gbd_2023/shared_code/bop/src/bopforge/: utils.py
gbd_2023/shared_code/onemod-mort/: README.md  pyproject.toml  requirements.txt  ruff.toml
gbd_2023/shared_code/onemod-mort/scripts/: resume_pipeline.py  run_pipeline.py  run_single_instance.py  run_splicing_pipeline.py  run_splicing_single_instance.py
gbd_2023/shared_code/onemod-mort/scripts/action_set/: prepare_handoff.py
gbd_2023/shared_code/onemod-mort/scripts/actions/: calibrate_uncertainty.py  cleanup_dir.py  combine_data.py  combine_figures.py  compute_life_expectancy.py  create_cmp_figures.py  create_coef_figures.py  create_cov_figures.py  create_draws.py  create_figures.py  create_intercept_figures.py  create_life_expectancy_figures.py  create_under5_deaths_figures.py  fit_global.py  fit_kreg.py  fit_location.py  fit_national.py  prepare_handoff.py  preprocess.py  preprocess_post_raw_data.py  splice_patterns.py
gbd_2023/shared_code/onemod-mort/src/mortest/: figures.py  job_manager.py  life_expectancy.py
gbd_2023/shared_code/pydisagg/: CODE_OF_CONDUCT.md  LICENSE  README.md  changelog.md  paper.bib  paper.md  pyproject.toml  ruff.toml
gbd_2023/shared_code/pydisagg/docs/: build.py  conf.py  index.rst  meta.toml
gbd_2023/shared_code/pydisagg/docs/api_reference/: example.rst  index.rst
gbd_2023/shared_code/pydisagg/docs/developer_guide/: index.rst
gbd_2023/shared_code/pydisagg/docs/getting_started/: index.rst  installation.rst  quickstart.rst
gbd_2023/shared_code/pydisagg/docs/user_guide/: cicd.rst  config_guide.rst  documentation.rst  index.rst  project_organization.rst  r_example.rst  testing.rst
gbd_2023/shared_code/pydisagg/examples/: Basic Splitting Examples.ipynb  Dataframe Splitting Demo.ipynb  example_df_dataset.py  test_notebook.ipynb
gbd_2023/shared_code/pydisagg/examples/ihme_api/: age_split_example.py  cat_sex_split_example.py  cat_split.ipynb  cat_split_example.py  sex_split_example.py
gbd_2023/shared_code/pydisagg/src/pydisagg/: disaggregate.py  transformations.py  typing.py
gbd_2023/shared_code/pydisagg/tests/: test_age_splitter.py  test_cat_splitter.py  test_disaggregate_api.py  test_schema.py  test_sex_splitter.py  test_splitting_consistency.py  test_transformation_consistency.py  test_validator.py
gbd_2023/shared_code/regmod/: LICENSE  README.rst  pyproject.toml
gbd_2023/shared_code/regmod/docs/: api_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
gbd_2023/shared_code/regmod/docs/_modules/: index.html
gbd_2023/shared_code/regmod/docs/_sources/: api_reference.rst.txt  installation.rst.txt
gbd_2023/shared_code/regmod/docsrc/: Makefile  conf.py  index.rst  make.bat
gbd_2023/shared_code/regmod/src/regmod/: _typing.py  data.py  function.py  optimizer.py  parameter.py  prior.py  utils.py  variable.py
gbd_2023/shared_code/regmod/tests/: test_binomialmodel.py  test_data.py  test_function.py  test_gaussianmodel.py  test_namedlist.py  test_negativebinomialmodel.py  test_node.py  test_optimizer.py  test_parameter.py  test_pogitmodel.py  test_poissonmodel.py  test_prior.py  test_tobitmodel.py  test_utils.py  test_variable.py  test_weibullmodel.py
mapping_u5m_2017/: README.md
(+12566 files in other folders)
